--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
-		<title>Big Wednesday IO</title>
+		<title>Unified Console | Big Wednesday IO</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png" />
@@ -19,7 +19,7 @@
 	<body layout="column">
 		<md-toolbar layout="row">
 			<div class="md-toolbar-tools">
-				<h2>Personalisation Portal</h2>
+				<h2>Ufified Console</h2>
 				<span flex></span>
 				<div class="user-status" ng-controller="UserController as user" ng-show="user.isLoggedIn">
 					<span ng-bind="user.email"></span> <md-button class="md-raised" ng-click="user.logOut($event)">Log out</md-button>
