--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
 		<script src="assets/vendor/angular-animate/angular-animate.js"></script>
 		<script src="assets/vendor/angular-aria/angular-aria.js"></script>
 		<script src="assets/vendor/angular-material/angular-material.js"></script>
+		<script src="assets/vendor/angular-mocks/angular-mocks.js"></script>
 		<script src="assets/vendor/angular-ui-router/release/angular-ui-router.js"></script>
 		<!-- endbower -->
 		<script src="/assets/js/app.js"></script>
