--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 	<body layout="column">
 		<md-toolbar layout="row">
 			<div class="md-toolbar-tools">
-				<h2>Ufified Console</h2>
+				<h2>Unified Console</h2>
 				<span flex></span>
 				<div class="user-status" ng-controller="UserController as user" ng-show="user.isLoggedIn">
 					<span ng-bind="user.email"></span> <md-button class="md-raised" ng-click="user.logOut($event)">Log out</md-button>
