--- a/app/index.html
+++ b/app/index.html
@@ -6,18 +6,18 @@
 		<title>Unified Admin Console | Big Wednesday IO</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<link rel="apple-touch-icon" href="/assets/images/apple-touch-icon.png" />
+		<base href="/" />
+
+		<link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png" />
 		<link rel="favicon" href="favicon.ico" />
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 		<!-- bower:css -->
 		<link rel="stylesheet" href="assets/vendor/angular-material/angular-material.css" />
 		<!-- endbower -->
-		<link rel="stylesheet" href="/assets/css/app.css" />
+		<link rel="stylesheet" href="assets/css/app.css" />
 
-		<script src="/assets/js/modernizr-custom.js"></script>
-
-		<base href="/" />
+		<script src="assets/js/modernizr-custom.js"></script>
 	</head>
 	<body layout="column">
 		<md-toolbar layout="row" class="md-accent">
@@ -25,7 +25,7 @@
 				<h2>Unified Admin Console</h2>
 				<div class="material-search-wrapper">
 					<md-icon md-svg-src="/assets/images/icons/search.svg"></md-icon>
-					<input type="search" class="material-search" placeholder="Search for accounts, outlets, orders or people" aria-label="Search for accounts, outlets, orders or people" />
+					<input type="search" class="material-search" placeholder="Search for personalisations" aria-label="Search for personalisations" />
 				</div>
 				<span flex></span>
 				<div class="user-status" ng-controller="UserController as user" ng-show="user.isLoggedIn">
@@ -37,6 +37,7 @@
 		<div layout="row" flex>
 			<md-sidenav class="md-sidenav-left md-whiteframe-z1" md-component-id="left" md-is-locked-open="true" ui-view="sidebar"></md-sidenav>
 			<md-content flex ui-view></md-content>
+			<md-sidenav class="md-sidenav-right md-whiteframe-z1" md-component-id="left" md-is-locked-open="true" ui-view="sidebar-right"></md-sidenav>
 		</div>
 		<div ui-view="bottom-drawer"></div>
 
@@ -49,6 +50,6 @@
 		<script src="assets/vendor/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="assets/vendor/velocity/velocity.js"></script>
 		<!-- endbower -->
-		<script src="/assets/js/app.js"></script>
+		<script src="assets/js/app.js"></script>
 	</body>
 </html>
