--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,7 @@
 		<script src="assets/vendor/angular-mocks/angular-mocks.js"></script>
 		<script src="assets/vendor/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="assets/vendor/velocity/velocity.js"></script>
+		<script src="assets/vendor/lodash/lodash.js"></script>
 		<!-- endbower -->
 		<script src="assets/js/app.js"></script>
 	</body>
