--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,7 @@
 		<script src="assets/vendor/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="assets/vendor/velocity/velocity.js"></script>
 		<script src="assets/vendor/lodash/lodash.js"></script>
+		<script src="assets/vendor/angular-messages/angular-messages.js"></script>
 		<!-- endbower -->
 		<script src="assets/js/app.js"></script>
 	</body>
